--- a/people/index.html
+++ b/people/index.html
@@ -97,20 +97,6 @@
         </div>
         <div class="row people_row">
             <div class="two columns">
-                <img src='headshots/thomas.png' style="width:100%">
-            </div>
-            <div class="seven columns">
-                <p1><b>Thomas Dupic</b></p1><br />
-                <p2>HFSP Postdoctoral Fellow</p2>
-                <p>Thomas joined the lab in 2020. He earned his Ph.D. at UPMC in Paris in theoretical physics then
-                    worked on computational immunology with Aleksandra Walczak and Thierry Mora. In the Desai Lab,
-                    Thomas is working on mapping the affinity landscape of in-vivo antibodies against various antigens
-                    and on understanding the theoretical basis for B-cells evolution.</p>
-                <p3><i>dupic.thomas [at] gmail.com</i></p3>
-            </div>
-        </div>
-        <div class="row people_row">
-            <div class="two columns">
                 <img src='headshots/caroline.jpeg' style="width:100%">
             </div>
             <div class="seven columns">
@@ -164,19 +150,6 @@
         </div>
         <div class="row people_row">
             <div class="two columns">
-                <img src='headshots/eliot.jpg' style="width:100%">
-            </div>
-            <div class="seven columns">
-                <p1><b>Eliot Fenton</b></p1><br />
-                <p2>Graduate Student in Physics</p2>
-                <p>Eliot received his B.S. in Physics from the University of Maryland, College Park in 2018 and joined
-                    the lab in 2019. He uses a mix of experimental and computational techniques to study how factors
-                    such as sexual reproduction and gene networks impact the speed and trajectory of evolution.</p>
-                <p3><i>eliotfenton [at] g.harvard.edu</i></p3>
-            </div>
-        </div>
-        <div class="row people_row">
-            <div class="two columns">
                 <img src='headshots/misha.jpeg' style="width:100%">
             </div>
             <div class="seven columns">
@@ -198,19 +171,6 @@
                 <p>Jack joined the lab in 2021. He is working on molecular barcoding methods in the E. coli long-term
                     evolution experiment, and is also broadly interested in evolutionary theory.</p>
                 <p3><i>jedwards1 [at] fas.harvard.edu</i></p3>
-            </div>
-        </div>
-        <div class="row people_row">
-            <div class="two columns">
-                <img src='headshots/berk.jpeg' style="width:100%">
-            </div>
-            <div class="seven columns">
-                <p1><b>Berk Alpay</b></p1><br />
-                <p2>Graduate Student in Systems, Synthetic, and Quantitative Biology</p2>
-                <p>Berk earned his degrees in Computer Science and Mathematics at the University of Connecticut, joining
-                    the lab in 2022. He investigates directed evolution's traversal of genotype-phenotype maps,
-                    theoretically and using in vitro assays of antibody binding affinities.</p>
-                <p3><i>berk_alpay [at] g.harvard.edu</i> <a href="http://berkalpay.com">[website]</a></p3>
             </div>
         </div>
         <div class="row people_row">
@@ -270,7 +230,13 @@
 
         <div class="alumni">
             <h3>Lab Alumni</h3>
-            <p><strong>Shreyas Gopalakrishnan</strong></a><br />
+            <p><strong><a href="https://www.berkalpay.com/">Berk Alpay</strong></a><br />
+                Postdoc, Fontana Lab, Harvard Medical School</p>
+            <p><strong><a href="https://www.thopic.eu/">Thomas Dupic</strong></a><br />
+                Team Leader, Centre d'Immunologie de Marseille-Luminy</p>
+            <p><strong>Eliot Fenton</strong></a><br />
+                Bioinformatics</p>
+            <p><strong>Shreyas Gopalakrishnan</strong><br />
                 Postdoc, Petrov Lab, Stanford University</p>
             <p><strong><a href="https://arego-costa.com/">Artur Rego-Costa</strong></a><br />
                 Bioinformatics Scientist, Regeneron.</p>
