adjust punctuation etc.

--- a/people/index.html
+++ b/people/index.html
@@ -230,7 +230,7 @@
 
         <div class="alumni">
             <h3>Lab Alumni</h3>
-            <p><strong><a href="https://www.berkalpay.com/">Berk Alpay</strong></a><br />
+            <p><strong><a href="https://www.berkalpay.com/">Berk A. Alpay</strong></a><br />
                 Postdoc, Fontana Lab, Harvard Medical School</p>
             <p><strong><a href="https://www.thopic.eu/">Thomas Dupic</strong></a><br />
                 Team Leader, Centre d'Immunologie de Marseille-Luminy</p>
@@ -239,67 +239,67 @@
             <p><strong>Shreyas Gopalakrishnan</strong><br />
                 Postdoc, Petrov Lab, Stanford University</p>
             <p><strong><a href="https://arego-costa.com/">Artur Rego-Costa</strong></a><br />
-                Bioinformatics Scientist, Regeneron.</p>
+                Bioinformatics Scientist, Regeneron</p>
             <p><strong><a href="https://reddylab.physics.princeton.edu/">Gautam Reddy</strong></a><br />
-                Assistant Professor, Princeton.</p>
+                Assistant Professor, Princeton</p>
             <p><strong>Tanush Jagdish</strong><br />
-                Consultant, McKinsey.</p>
+                Consultant, McKinsey</p>
             <p><strong><a href="https://aphillipslab.ucsf.edu/">Angela Phillips</strong></a><br />
-                Assistant Professor, University of California, San Francisco.</p>
+                Assistant Professor, University of California, San Francisco</p>
             <p><strong>Jiseon Min</strong><br />
                 Postdoc, Kern Lab, University of Oregon</p>
             <p><strong>Katherine Lawrence</strong><br />
                 Scientist, Oxford Nanopore</p>
             <p><strong><a href="https://www.miloswebsite.com/">Milo Johnson</strong></a><br />
-                Postdoc, Koskella lab, UC Berkeley.</p>
+                Postdoc, Koskella lab, UC Berkeley</p>
             <p><strong><a href="https://www.linkedin.com/in/chrisbakerlee/">Chris
-                        Bakerlee</strong></a><br />Biosecurity.</p>
+                        Bakerlee</strong></a><br />Biosecurity</p>
             <p><strong><a href="https://annb-lab.github.io/">Alex N. Nguyen Ba</strong></a><br />
-                Assistant Professor, University of Toronto.</p>
+                Assistant Professor, University of Toronto</p>
             <p><strong><a href="https://www.margreslab.com/">Mark Margres</strong></a><br />
-                Assistant Professor, University of South Florida.</p>
+                Assistant Professor, University of South Florida</p>
             <p><strong><a href="https://sites.google.com/site/sudiptatung/">Sudipta Tung</strong></a><br />
-                DBT/Wellcome Trust India Alliance Early Career Fellow, Department of Biology, Ashoka University, India.
+                DBT/Wellcome Trust India Alliance Early Career Fellow, Department of Biology, Ashoka University, India
             </p>
             <p><strong><a href="https://www.mcdonald-lab.com">Michael J. McDonald</strong></a><br />
-                Assistant Professor, Monash University.</p>
+                Assistant Professor, Monash University</p>
             <p><strong><a href="http://sklab.science">Sergey Kryazhimskiy</strong></a><br />
-                Associate Professor, University of California San Diego.</p>
+                Associate Professor, University of California, San Diego</p>
             <p><strong><a href="http://unipedalape.weebly.com/">J. David van Dyken</strong></a><br />
-                Assistant Professor, University of Miami.</p>
+                Assistant Professor, University of Miami</p>
             <p><strong><a href="http://www.perronlab.net">Gabriel Perron</strong></a><br />
-                Assistant Professor, Bard College.</p>
+                Assistant Professor, Bard College</p>
             <p><strong><a href="http://www.ch.cam.ac.uk/person/ljc37">Lucy Colwell</strong></a><br />
-                Lecturer (Assistant Professor), Cambridge University.</p>
+                Lecturer (Assistant Professor), Cambridge University</p>
             <p><strong><a href="https://sites.google.com/view/ivanacvijovic/home">Ivana Cvijovic</strong></a><br />
-                Lewis-Sigler Fellow, Princeton University.</p>
+                Lewis-Sigler Fellow, Princeton University</p>
             <p><strong>Matthew Melissa</strong><br />
-                Data Scientist, Google.</p>
+                Data Scientist, Google</p>
             <p><strong>Ramya Purkanti</strong><br />
-                Postdoc, Vastenhouw lab, Max-Planck Institute of Molecular Cell Biology and Genetics.</p>
+                Postdoc, Vastenhouw lab, Max-Planck Institute of Molecular Cell Biology and Genetics</p>
             <p><strong><a href="http://www.laurenatphysics.com/p/about.html">Lauren Nicolaisen</strong></a><br />
-                Data Scientist, Khan Academy.</p>
+                Data Scientist, Khan Academy</p>
             <p><strong><a href="https://bgoodlab.github.io">Benjamin H. Good</strong></a><br />
-                Assistant Professor, Stanford University.</p>
+                Assistant Professor, Stanford University</p>
             <p><strong><a href="https://jerisonlab.uchicago.edu/">Elizabeth R. Jerison</strong></a><br />
-                Assitant Professor, University of Chicago.</p>
+                Assitant Professor, University of Chicago</p>
             <p><strong>Evgeni M. Frenkel</strong><br />
-                Postdoc, Sabatini Lab, Whitehead Institute.</p>
+                Postdoc, Sabatini Lab, Whitehead Institute</p>
             <p><strong><a href="http://www.laurenatphysics.com/p/about.html">Katya Kosheleva</strong></a><br />
-                Bioinformatics Scientist, Invitae.</p>
+                Bioinformatics Scientist, Invitae</p>
             <p><strong><a href="https://sites.google.com/site/danielpaulrice/">Daniel P. Rice</strong></a><br />
-                Postdoc, Novembre Lab, University of Chicago.</p>
+                Postdoc, Novembre Lab, University of Chicago</p>
             <p><strong><a href="http://jireva.org">Jose I. Rojas Echenique</strong></a><br />
-                Postdoc, Boone Lab, University of Toronto.</p>
+                Postdoc, Boone Lab, University of Toronto</p>
             <p><strong><a href="http://physics.berkeley.edu/people/graduate-student/stephen-martis">Stephen
                         Martis</strong></a><br />
-                Graduate Student, UC Berkeley.</p>
+                Graduate Student, UC Berkeley</p>
             <p><strong>Ian Ochs</strong></a><br />
-                Graduate Student, Princeton University.</p>
+                Graduate Student, Princeton University</p>
             <p><strong>Juhee Goyal</strong></a><br />
-                Undergraduate, Harvard College.</p>
+                Undergraduate, Harvard College</p>
             <p><strong>Julian Kates-Harbeck</strong></a><br />
-                Team Lead, AI, Kernel.</p>
+                Team Lead, AI, Kernel</p>
             <p><strong>Parris Humphrey</strong></a><br />
                 Bioinformatics Scientist, Myriad Genetics</p>
 
