--- a/publications/index.html
+++ b/publications/index.html
@@ -72,10 +72,11 @@
                 <h4>Publications</h4>
                 <ul id="publication_list">
 
-                    <li><strong>Alpay, B.</strong> and <strong>M. M. Desai</strong>. Effects of selection stringency on
-                        the outcomes of directed evolution. <em>bioRxiv</em> 598029 (2024). <a
+                    <li><strong>Alpay, B. A.</strong> and <strong>M. M. Desai</strong>. Effects of selection stringency
+                        on
+                        the outcomes of directed evolution. <em>PLOS One</em> 19:1-16 (2024). <a
                             href="https://www.biorxiv.org/content/10.1101/2024.06.09.598029v1.full.pdf">[pdf]</a>
-                    <li><strong>Alpay, B.</strong>, J. M. Higgins, and <strong>M. M. Desai</strong>.
+                    <li><strong>Alpay, B. A.</strong>, J. M. Higgins, and <strong>M. M. Desai</strong>.
                         Some statistical theory for interpreting reference distributions. <em>medRxiv</em> 24309680
                         (2024). <a href="https://www.medrxiv.org/content/10.1101/2024.07.23.24309680.full.pdf">[pdf]</a>
                     <li><strong>Dupic, T.</strong>, <strong>A. M. Phillips</strong>, and <strong>M. M. Desai</strong>.
